--- a/Main.xaml
+++ b/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="679.2,896" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:sc="clr-namespace:System.ComponentModel;assembly=System" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sg="clr-namespace:System.Globalization;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:uix="http://schemas.uipath.com/workflow/activities/uix" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" mva:VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="928.8,896" sap2010:WorkflowViewState.IdRef="ActivityBuilder_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:sc="clr-namespace:System.ComponentModel;assembly=System" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:sg="clr-namespace:System.Globalization;assembly=mscorlib" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:uix="http://schemas.uipath.com/workflow/activities/uix" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="43">
       <x:String>System.Activities</x:String>
@@ -79,12 +79,12 @@
       <AssemblyReference>System.Memory</AssemblyReference>
       <AssemblyReference>NPOI</AssemblyReference>
       <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
       <AssemblyReference>Microsoft.Activities.Extensions</AssemblyReference>
       <AssemblyReference>UiPath.CV</AssemblyReference>
       <AssemblyReference>UiPath.CV.Activities</AssemblyReference>
       <AssemblyReference>UiPath.System.Activities.Design</AssemblyReference>
       <AssemblyReference>UiPath.UIAutomationNext.Activities.Design</AssemblyReference>
+      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
   <Flowchart DisplayName="Strava to flytskjema" sap:VirtualizedContainerService.HintSize="939.2,676.8" sap2010:WorkflowViewState.IdRef="Flowchart_1">
@@ -120,7 +120,7 @@
           <av:PointCollection x:Key="ConnectorLocation">230,359.2 230,389.2 325.841666666667,389.2 325.841666666667,399.2</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:InterruptibleDoWhile CurrentIndex="{x:Null}" DisplayName="Iterate through strava activities" sap:VirtualizedContainerService.HintSize="808.8,1236.8" sap2010:WorkflowViewState.IdRef="InterruptibleDoWhile_4">
+      <ui:InterruptibleDoWhile CurrentIndex="{x:Null}" Condition="[int_counterWord &lt; 16]" DisplayName="Iterate through strava activities" sap:VirtualizedContainerService.HintSize="200,52.8" sap2010:WorkflowViewState.IdRef="InterruptibleDoWhile_4">
         <ui:InterruptibleDoWhile.Body>
           <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="773.6,1069.6" sap2010:WorkflowViewState.IdRef="Sequence_20">
             <Sequence.Variables>
@@ -185,7 +185,7 @@
                             </ui:Target>
                           </ui:SetFocus.Target>
                         </ui:SetFocus>
-                        <TryCatch sap2010:Annotation.AnnotationText="TryCatcher denne, om det er tomt for aktivteter - klikk neste side og reset int_counterStrava&#xD;&#xA;" DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="436.8,480" sap2010:WorkflowViewState.IdRef="TryCatch_3">
+                        <TryCatch sap2010:Annotation.AnnotationText="TryCatcher denne, om det er tomt for aktivteter - klikk neste side og reset int_counterStrava&#xA;" DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="436.8,480" sap2010:WorkflowViewState.IdRef="TryCatch_3">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
@@ -275,7 +275,7 @@
                             <OutArgument x:TypeArguments="x:String">[str_varigheit]</OutArgument>
                           </uix:NGetText.Text>
                         </uix:NGetText>
-                        <WriteLine DisplayName="Quick log" sap:VirtualizedContainerService.HintSize="436.8,62.4" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Aktivitetsnamn: &quot; + str_aktivitetsnamn + vbNewLine + &#xD;&#xA;&quot;Forklaring: &quot; + str_forklaring + vbNewLine +&#xD;&#xA;&quot;Dato: &quot; + str_dato +  vbNewLine+ &#xD;&#xA;&quot;Varigheit: &quot; + str_varigheit]" />
+                        <WriteLine DisplayName="Quick log" sap:VirtualizedContainerService.HintSize="436.8,62.4" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Aktivitetsnamn: &quot; + str_aktivitetsnamn + vbNewLine + &#xA;&quot;Forklaring: &quot; + str_forklaring + vbNewLine +&#xA;&quot;Dato: &quot; + str_dato +  vbNewLine+ &#xA;&quot;Varigheit: &quot; + str_varigheit]" />
                       </Sequence>
                     </ActivityAction>
                   </uix:NApplicationCard.Body>
@@ -348,10 +348,7 @@
                       <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="450.4,62.4" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="[&quot;Varigheit: &quot; + timespan_varigheit.ToString]" />
                     </Sequence>
                     <FlowStep.Next>
-                      <FlowDecision x:Name="__ReferenceID7" DisplayName="Varigheit over 30min" sap:VirtualizedContainerService.HintSize="115.2,87.2" sap2010:WorkflowViewState.IdRef="FlowDecision_4">
-                        <FlowDecision.Condition>
-                          <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="timespan_varigheit &gt; timespan_30min" />
-                        </FlowDecision.Condition>
+                      <FlowDecision x:Name="__ReferenceID7" Condition="[timespan_varigheit &gt; timespan_30min]" DisplayName="Varigheit over 30min" sap:VirtualizedContainerService.HintSize="115.2,87.2" sap2010:WorkflowViewState.IdRef="FlowDecision_4">
                         <sap:WorkflowViewStateService.ViewState>
                           <scg:Dictionary x:TypeArguments="x:String, x:Object">
                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -430,10 +427,7 @@
                               </TryCatch.Catches>
                             </TryCatch>
                             <FlowStep.Next>
-                              <FlowDecision x:Name="__ReferenceID2" DisplayName="Dato er i større enn 2021" sap:VirtualizedContainerService.HintSize="136.8,87.2" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
-                                <FlowDecision.Condition>
-                                  <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="dateTime_dato.Year &gt; 2021" />
-                                </FlowDecision.Condition>
+                              <FlowDecision x:Name="__ReferenceID2" Condition="[dateTime_dato.Year &gt; 2021]" DisplayName="Dato er i større enn 2021" sap:VirtualizedContainerService.HintSize="136.8,87.2" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
                                 <sap:WorkflowViewStateService.ViewState>
                                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -635,15 +629,9 @@
             </Flowchart>
           </Sequence>
         </ui:InterruptibleDoWhile.Body>
-        <ui:InterruptibleDoWhile.Condition>
-          <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="int_counterWord &lt; 16" />
-        </ui:InterruptibleDoWhile.Condition>
       </ui:InterruptibleDoWhile>
       <FlowStep.Next>
-        <FlowDecision x:Name="__ReferenceID14" DisplayName="2021?" sap:VirtualizedContainerService.HintSize="70.4,87.2" sap2010:WorkflowViewState.IdRef="FlowDecision_3">
-          <FlowDecision.Condition>
-            <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="bool_2021" />
-          </FlowDecision.Condition>
+        <FlowDecision x:Name="__ReferenceID14" Condition="[bool_2021]" DisplayName="2021?" sap:VirtualizedContainerService.HintSize="70.4,87.2" sap2010:WorkflowViewState.IdRef="FlowDecision_3">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -761,7 +749,7 @@
           <av:PointCollection x:Key="ConnectorLocation">300,166.4 300,196.4 230,196.4 230,216.4</av:PointCollection>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
-      <ui:MultipleAssign DisplayName="Many inits" sap:VirtualizedContainerService.HintSize="200,52.8" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
+      <ui:MultipleAssign DisplayName="Many inits" sap:VirtualizedContainerService.HintSize="430.4,288.8" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
         <ui:MultipleAssign.AssignOperations>
           <scg:List x:TypeArguments="ui:AssignOperation" Capacity="16">
             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_1">
@@ -801,7 +789,7 @@
                 <OutArgument x:TypeArguments="x:String">[str_TrimskjemaTEMPLATE]</OutArgument>
               </ui:AssignOperation.To>
               <ui:AssignOperation.Value>
-                <InArgument x:TypeArguments="x:String">c:\users\v150103\onedrive - nav\documents\uipath\stravatiltrimskjema\trimskjema\trim for alle nav-huset vår 2022.docx</InArgument>
+                <InArgument x:TypeArguments="x:String">trimskjema\trim for alle nav-huset vår 2022.docx</InArgument>
               </ui:AssignOperation.Value>
             </ui:AssignOperation>
             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_4">
@@ -809,7 +797,7 @@
                 <OutArgument x:TypeArguments="x:String">[str_TrimskjemaFilsti]</OutArgument>
               </ui:AssignOperation.To>
               <ui:AssignOperation.Value>
-                <InArgument x:TypeArguments="x:String">["c:\users\v150103\onedrive - nav\documents\uipath\stravatiltrimskjema\trimskjema\TrimskjemaUtfyltRobot_" + int_TrimskjemaNummer.ToString +"_.docx"]</InArgument>
+                <InArgument x:TypeArguments="x:String">["trimskjema\"+ int_TrimskjemaNummer.ToString +"_.docx"]</InArgument>
               </ui:AssignOperation.Value>
             </ui:AssignOperation>
             <ui:AssignOperation sap2010:WorkflowViewState.IdRef="AssignOperation_8">
