--- a/Main.xaml
+++ b/Main.xaml
@@ -93,7 +93,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Flowchart DisplayName="Strava to flytskjema" sap:VirtualizedContainerService.HintSize="939.2,703.2" sap2010:WorkflowViewState.IdRef="Flowchart_1">
+  <Flowchart DisplayName="Strava to flytskjema" sap:VirtualizedContainerService.HintSize="633.6,643.2" sap2010:WorkflowViewState.IdRef="Flowchart_1">
     <Flowchart.Variables>
       <Variable x:TypeArguments="x:Int32" Name="int_counterWord" />
       <Variable x:TypeArguments="sg:CultureInfo" Name="ci" />
@@ -113,8 +113,7 @@
         <av:Point x:Key="ShapeLocation">270,2.5</av:Point>
         <av:Size x:Key="ShapeSize">60,75.2</av:Size>
         <av:PointCollection x:Key="ConnectorLocation">300,77.7 300,113.6</av:PointCollection>
-        <x:Double x:Key="Width">905.6</x:Double>
-        <x:Double x:Key="Height">666.4</x:Double>
+        <x:Double x:Key="Height">606.4</x:Double>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
     <Flowchart.StartNode>
@@ -281,15 +280,15 @@
                         <ActivityAction.Argument>
                           <DelegateInArgument x:TypeArguments="ui:WordDocument" Name="WordDocumentScope" />
                         </ActivityAction.Argument>
-                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="912.8,2624.8" sap2010:WorkflowViewState.IdRef="Sequence_53">
+                        <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="912.8,3708.8" sap2010:WorkflowViewState.IdRef="Sequence_53">
                           <sap:WorkflowViewStateService.ViewState>
                             <scg:Dictionary x:TypeArguments="x:String, x:Object">
                               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                             </scg:Dictionary>
                           </sap:WorkflowViewStateService.ViewState>
-                          <ui:InterruptibleDoWhile CurrentIndex="{x:Null}" DisplayName="Do While wordCounter is less than 15" sap:VirtualizedContainerService.HintSize="871.2,2501.6" sap2010:WorkflowViewState.IdRef="InterruptibleDoWhile_1">
+                          <ui:InterruptibleDoWhile CurrentIndex="{x:Null}" DisplayName="Do While wordCounter is less than 15" sap:VirtualizedContainerService.HintSize="871.2,3483.2" sap2010:WorkflowViewState.IdRef="InterruptibleDoWhile_1">
                             <ui:InterruptibleDoWhile.Body>
-                              <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="836,2334.4" sap2010:WorkflowViewState.IdRef="Sequence_75">
+                              <Sequence DisplayName="Do" sap:VirtualizedContainerService.HintSize="836,3316" sap2010:WorkflowViewState.IdRef="Sequence_75">
                                 <Sequence.Variables>
                                   <Variable x:TypeArguments="x:String" Name="str_forklaring" />
                                   <Variable x:TypeArguments="x:String" Name="str_dato" />
@@ -444,10 +443,10 @@
                                     </Sequence>
                                   </If.Else>
                                 </If>
-                                <Sequence DisplayName="convert Varigheit to TimeSpan" sap:VirtualizedContainerService.HintSize="794.4,68.8" sap2010:WorkflowViewState.IdRef="Sequence_70">
+                                <Sequence DisplayName="convert Varigheit to TimeSpan" sap:VirtualizedContainerService.HintSize="794.4,643.2" sap2010:WorkflowViewState.IdRef="Sequence_70">
                                   <sap:WorkflowViewStateService.ViewState>
                                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                                      <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                                       <x:Boolean x:Key="IsPinned">False</x:Boolean>
                                     </scg:Dictionary>
                                   </sap:WorkflowViewStateService.ViewState>
@@ -545,6 +544,27 @@
                                         </scg:Dictionary>
                                       </sap:WorkflowViewStateService.ViewState>
                                       <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="333.6,92.8" sap2010:WorkflowViewState.IdRef="LogMessage_20" Level="Info" Message="[&quot;Varigheit er under 30 min, skipper denne inputten!&quot; + vbNewLine + &#xA;&quot;Int counter i Word er: &quot; + int_counterWord.ToString + vbNewLine +&#xA;&quot;Dato: &quot; + dateTime_dato.ToString(&quot;dd.MM.yyyy&quot;,ci)+ vbNewLine +&#xA;&quot;Varigheit: &quot; + str_varigheit + vbNewLine +&#xA;&quot;Forklaring: &quot; + str_forklaring + vbNewLine]" />
+                                    </Sequence>
+                                  </If.Else>
+                                </If>
+                                <If Condition="[int_counterWord = 16]" sap:VirtualizedContainerService.HintSize="794.4,367.2" sap2010:WorkflowViewState.IdRef="If_10">
+                                  <If.Then>
+                                    <Sequence sap:VirtualizedContainerService.HintSize="375.2,178.4" sap2010:WorkflowViewState.IdRef="Sequence_76">
+                                      <sap:WorkflowViewStateService.ViewState>
+                                        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                        </scg:Dictionary>
+                                      </sap:WorkflowViewStateService.ViewState>
+                                      <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="333.6,85.6" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;STOP&quot;]" />
+                                    </Sequence>
+                                  </If.Then>
+                                  <If.Else>
+                                    <Sequence sap2010:WorkflowViewState.IdRef="Sequence_77">
+                                      <sap:WorkflowViewStateService.ViewState>
+                                        <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                                          <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                                        </scg:Dictionary>
+                                      </sap:WorkflowViewStateService.ViewState>
                                     </Sequence>
                                   </If.Else>
                                 </If>
